<resources>
    <string name="db_version" translatable="false">20210615</string>

    <string name="app_name">Вчимо англійську</string>
    <string name="title_activity_word_list">Word list</string>
    <string name="title_activity_learn_list">Learn list</string>
    <string name="title_activity_recap_list">Recap list</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_settings">Settings</string>

    <string name="btn_find">Find</string>
    <string name="btn_back">Back</string>
    <string name="btn_known">Known</string>
    <string name="btn_unknown">Unknown</string>
    <string name="btn_next">Next</string>
    <string name="btn_check">Check</string>
    <string name="btn_dict">Dict</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    <string name="menu_learn_stats">Learn stats</string>
    <string name="menu_files_to_read">Files to read</string>
    <string name="menu_learned_words">Learned words</string>
    <string name="menu_restore_learned">Restore from file …</string>
    <string name="menu_save_learned">Save to file …</string>
    <string name="menu_mark_learned">Mark as learned …</string>
    <string name="menu_choose_file">Choose file …</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_word_lists">Word lists</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_recap">Recap</string>
    <string name="menu_rank_list">Words by rank …</string>
    <string name="menu_remove_item">Remove item</string>
    <string name="menu_mark_known_and_remove">Mark known and remove</string>
    <string name="menu_add_to_quiz">Add to quiz</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_check_update">Check for update</string>
    <string name="menu_update_db_from_file">Update DB from file</string>

    <string name="dlg_learn_stats_date">Date</string>
    <string name="dlg_learn_stats_word_count">Learn</string>
    <string name="dlg_learn_stats_recap_count">Recap</string>
    <string name="dlg_learn_stats_total">Total</string>
    <string name="dlg_dict_set_to_known">set to known</string>
    <string name="dlg_dict_set_to_unknown">set to unknown</string>
    <string name="dlg_read_page">Page</string>
    <string name="dlg_read_from">from</string>
    <string name="dlg_read_prev">Prev</string>
    <string name="dlg_read_next">Next</string>
    <string name="dlg_read_goto">Go to …</string>
    <string name="dlg_read_goto_page">Go to page</string>
    <string name="dlg_mark_learned_msg">Mark words with rank less then … as known.</string>
    <string name="dlg_rank_list_msg">Show words with rank starting from</string>

    <string name="msg_word_added_to_quiz">Word added to quiz</string>
    <string name="msg_word_in_quiz">Word is already in quiz</string>
    <string name="msg_you_have_learned">You have learned word</string>
    <string name="msg_you_have_recapped">You have recapped word</string>
    <string name="msg_please_select_answer">Please select an answer.</string>

    <!-- Preference Titles -->
    <string name="title_quiz_settings">Quiz settings</string>
    <string name="title_max_quiz_score">Max quiz score</string>
    <string name="title_reader_settings">Reader settings</string>
    <string name="title_text_zoom">Text zoom (%)</string>

    <string name="title_choose_folder">Choose folder</string>
    <string name="title_choose_file">Choose file</string>
</resources>
